Introduce websocket api for bulk email checks. Added Frontend for easier work